--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,6 +9,17 @@
 
 
 {  
+name:"โคตรคนทีมมหากาฬ 4 (2023)",
+image:"https://img.inwiptv.net/postor/20241123125355iwsMu0ehRPbtaSxqiaUDQB9qMWT.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Expend4bles_2023/Expend4bles_2023_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},    
+
+
+    
+{  
 name:"Ambulance ปล้นระห่ำ ฉุกเฉินระทึก (2022)",
 image:"https://img.inwiptv.net/postor/20220603051253kuxjMVuc3VTD7p42TZpJNsSrM1V.jpg",
 url:"https://m1free.inwstream.com:1936/movie3/Ambulance_2022/Ambulance_2022_th_1080p.mp4/chunk.m3u8",
