--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -30,7 +30,14 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
      "playInNatPlayer": "true"
     },
-
+		{
+		"name": "TruePremierFootball 1FW4",
+		"image": "https://dookeela.live/uploads/1664499665.png",
+		"url": "https://fw4free.inwstream.com/fw4free/ch1.stream/chunklist.m3u8",
+		"referer": "https://ballsodlive.com",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
 		{
 		"name": "TruePremierFootball 1BSL",
 		"image": "https://dookeela.live/uploads/1664499665.png",
@@ -195,7 +202,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
      "playInNatPlayer": "true" 
     },
-
+		{
+		"name": "TruePremierFootball 2FW4",
+		"image": "https://dookeela.live/uploads/1664499673.png",
+		"url": "https://fw4free.inwstream.com/fw4free/ch2.stream/chunklist.m3u8",
+		"referer": "https://ballsodlive.com",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
 		{
 		"name": "TruePremierFootball 2BSL",
 		"image": "https://dookeela.live/uploads/1664499673.png",
@@ -348,6 +362,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
     },
 
 		{
+		"name": "TruePremierFootball 3FW4",
+		"image": "https://dookeela.live/uploads/1664499681.png",
+		"url": "https://fw4free.inwstream.com/fw4free/ch3.stream/chunklist.m3u8",
+		"referer": "https://ballsodlive.com",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
+		{
 		"name": "TruePremierFootball 3BSL",
 		"image": "https://dookeela.live/uploads/1664499681.png",
 		"url": "https://ballsodlive.com/tv-online/ch375/",
@@ -463,6 +485,16 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
+
+		{
+		"name": "TruePremierFootball 4FW4",
+		"image": "https://dookeela.live/uploads/1664499692.png",
+		"url": "https://fw4free.inwstream.com/fw4free/ch4.stream/chunklist.m3u8",
+		"referer": "https://ballsodlive.com",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
+
 		{
 		"name": "TruePremierFootball 4BSL",
 		"image": "https://dookeela.live/uploads/1664499692.png",
@@ -563,6 +595,15 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
      "playInNatPlayer": "true" 
     },
+
+		{
+		"name": "TruePremierFootball 5FW4",
+		"image": "https://dookeela.live/uploads/1664499700.png",
+		"url": "https://fw4free.inwstream.com/fw4free/ch5.stream/chunklist.m3u8",
+		"referer": "https://ballsodlive.com",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
 
 		{
 		"name": "TruePremierFootball 5BSL",
