--- a/Nexter-Backup.html
+++ b/Nexter-Backup.html
@@ -14,7 +14,7 @@
 "name": "GOJEK TV",
 "author": "Nexter",
 "image": "https://img5.pic.in.th/file/secure-sv1/Remove-bg.ai_1730213083955ae6fe5c419105d3c.png",
-"url": "https://bit.ly/3Adfgoz",
+"url": "https://pastebin.com/raw/uLW3GBJK",
 "import": "true"
 },
 
