--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -22,6 +22,23 @@ url:"https://m1free.inwstream.com:1936/movie3/Deadlock_2021/Deadlock_2021_th_108
 
 
 
+
+
+{  
+name:"ล่าล้างแค้น แหกกฎเถื่อน (1988)",
+image:"https://img.inwiptv.net/postor/20180823203318young-guns-522ba2e16674f.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Young_Guns_1988/Young_Guns_1988_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+    
+
+
+
+
+
     
 {  
 name:"ทูมสโตน ดวลกลางตะวัน",
